[US COMPLETED] Como cliente quiero recibir un aviso con el importe, número de cuenta y número de reserva para poder realizar el pago del 20% en el plazo de 3 días.
